--- a/Selenium/proyectos_github_y_sus_urls.ipynb
+++ b/Selenium/proyectos_github_y_sus_urls.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Tutorial sacado de la pagina: **[ByPerth](https://www.byperth.com/)**\n",
+    "*Si bien la version es distinta el paso a paso es similar (con alguna que otra modificacion del codigo)*  \n",
+    "\n",
+    "\n",
     "Vamos a probar con github  \n",
     " * previamente a la extraccion siempre chequeamos si existe algun impedimento de la pagina, chequeamos que no exista algun archivo /robot.txt (github.com/robot.txt)  \n",
     "* *importante: la version que se utiliza en este tutorial es selenium==4.21.0*"
