--- a/twitter/tweepy.ipynb
+++ b/twitter/tweepy.ipynb
@@ -41,13 +41,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"a5EkDZfmI7mPoKIuhJkWOwem8\"\n",
-    "#user_id = YzEzbkpYbTE5VE91Y3o1OVl5OVU6MTpjaQ\n",
-    "#user_secret = wUjldzFH469FFcKdjQZl_KlHZx_xZDNhxMc8H7JC69QRDxold6\n",
-    "api_secret = \"dqphzdIegGTBdaQ8qRCTthxcVcph29SzaloXqE6Q3amNG7o812\"\n",
-    "access_token = \"1401364994986590211-RYDaRLZdHn9rHG9n97CHIho00vtqwS\"\n",
-    "access_secret = \"bbC2dPhM62CqsgkdJr3Y7pOkqovGGblM4JGHYWvPXwkGF\"\n",
-    "bearer_token = \"AAAAAAAAAAAAAAAAAAAAACQOugEAAAAAGm%2FIpa2%2FAuEe1sG3Ueqo%2FG8%2B3uc%3DXxJ3xtEUkfz3DtZfBpjmoi7XMUyzvZ7nBDzrk9O47TmAVVvW5Z\""
+    "api_key = \"\"\n",
+    "#user_id = \n",
+    "#user_secret = \n",
+    "api_secret = \"\"\n",
+    "access_token = \"-\"\n",
+    "access_secret = \"\"\n",
+    "bearer_token = \"%%%%\""
    ]
   },
   {
