--- a/twitter/tweepy.ipynb
+++ b/twitter/tweepy.ipynb
@@ -83,7 +83,7 @@
     "    warnings.simplefilter(\"ignore\")\n",
     "\n",
     "    try:\n",
-    "        user_id = \"@matiasjoaquinb4\"\n",
+    "        user_id = \"@\"\n",
     "        tweets = client.get_users_tweets(id=user_id, max_results=10)\n",
     "    \n",
     "        for tweet in tweets.data:\n",
